feat: se agregan interfaces en infraestructura

--- a/src/ManticoreCapital.Infrastructure.Interfaces/ManticoreCapital.Infrastructure.Interfaces.csproj
+++ b/src/ManticoreCapital.Infrastructure.Interfaces/ManticoreCapital.Infrastructure.Interfaces.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ManticoreCapital.Infrastructure.Domain.Entities\ManticoreCapital.Infrastructure.Domain.Entities.csproj" />
+    <ProjectReference Include="..\ManticoreCapital.Transversal.Interfaces\ManticoreCapital.Transversal.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
