--- a/src/ManticoreCapital.Infrastructure.Data/ManticoreCapital.Infrastructure.Data.csproj
+++ b/src/ManticoreCapital.Infrastructure.Data/ManticoreCapital.Infrastructure.Data.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ManticoreCapital.Infrastructure.Interfaces\ManticoreCapital.Infrastructure.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
