--- a/src/ManticoreCapital.Presentation/ManticoreCapital.Presentation.csproj
+++ b/src/ManticoreCapital.Presentation/ManticoreCapital.Presentation.csproj
@@ -8,4 +8,26 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ManticoreCapital.Application.Main\ManticoreCapital.Application.Main.csproj" />
+    <ProjectReference Include="..\ManticoreCapital.Infrastructure.IoC\ManticoreCapital.Infrastructure.IoC.csproj" />
+    <ProjectReference Include="..\ManticoreCapital.Transversal.IoC\ManticoreCapital.Transversal.IoC.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
